# donarity-oatpp

./: README.md
front/: index.html  package.json
front/src/: App.js
server/: .gitignore  CMakeLists.txt  prepare.sh  run_script.sh
server/main/: CMakeLists.txt
server/main/resources/: config.json
server/main/src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  FilesIndex.cpp  SitePath.hpp
server/main/src/controller/: EmployeeController.hpp  StaticController.hpp
server/main/src/db/: EmployeeDb.hpp
server/main/src/dto/: ConfigDto.hpp  EmployeeDto.hpp  PageDto.hpp
server/main/src/service/: EmployeeService.cpp  EmployeeService.hpp
